force-app/src/objects/npsp__Trigger_Handler__c.object
<CustomObject>
    <description>Stores which classes to run in response to DML performed on an object.</description>
    <fields>
        <fullName>npsp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this Trigger Handler is in use.</description>
        <inlineHelpText>Indicates that this module is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this class should run asynchronously in this transaction, for any of its After events.</description>
        <inlineHelpText>Indicates that this module should be run asynchronously in this transaction, for any of its After events.</inlineHelpText>
        <label>Asynchronous After Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Class__c</fullName>
        <description>The name of the class to run.</description>
        <inlineHelpText>Name of the class to be run</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Load_Order__c</fullName>
        <description>The order in which this class should run. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</description>
        <inlineHelpText>Order in which this module should be run, helps maintain dependencies in the modules and data.</inlineHelpText>
        <label>Load Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Object__c</fullName>
        <description>The name of the object the class should act on, for example, Account, Contact, or Opportunity.</description>
        <inlineHelpText>Name of the object this handler should be run for</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Trigger_Action__c</fullName>
        <description>The context in which this class should run, for example, before a record is inserted, after a record is deleted, etc.</description>
        <inlineHelpText>Trigger Action in which this module should fire</inlineHelpText>
        <label>Trigger Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BeforeInsert</fullName>
                </value>
                <value>
                    <fullName>BeforeUpdate</fullName>
                </value>
                <value>
                    <fullName>BeforeDelete</fullName>
                </value>
                <value>
                    <fullName>AfterInsert</fullName>
                </value>
                <value>
                    <fullName>AfterUpdate</fullName>
                </value>
                <value>
                    <fullName>AfterDelete</fullName>
                </value>
                <value>
                    <fullName>AfterUndelete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__User_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP will no longer push updates to this Trigger Handler. Select this option if you have made changes that you do not want NPSP to overwrite.</description>
        <inlineHelpText>Check it if you intent to manage the record yourself. Be aware that updates to the package won&apos;t update the record.</inlineHelpText>
        <label>User Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Usernames_to_Exclude__c</fullName>
        <description>A semicolon-separated list of Usernames that this Trigger Handler will not run for. Leave blank to run for all Users.</description>
        <inlineHelpText>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</inlineHelpText>
        <label>Usernames to Exclude</label>
        <type>TextArea</type>
    </fields>
    <label>Trigger Handler</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>npsp__Class__c</columns>
        <columns>npsp__Object__c</columns>
        <columns>npsp__Load_Order__c</columns>
        <columns>npsp__Active__c</columns>
        <columns>npsp__User_Managed__c</columns>
        <columns>npsp__Usernames_to_Exclude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>npsp__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>npsp__All</fullName>
        <columns>NAME</columns>
        <columns>npsp__Object__c</columns>
        <columns>npsp__Active__c</columns>
        <columns>npsp__Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trigger Handler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>